Updated SideBar, constants and fix the bug in horizontal scrollBar

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,10 @@ body {
 }
 
 .scrollBar::-webkit-scrollbar {
-    width: 0.5vw;
-    height: 1.2vh;
+    width: 0.8rem;
+    height: 0.8rem;
+}
+
+.scrollBar::-webkit-scrollbar-thumb {
+    display: none;
 }
